--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -53,6 +53,7 @@
 						@profile.Provider.EntityTypeName
 					</td>
 					<td class="centered">
+						@Html.IconForFileExtension(profile.Provider.FileExtension)
 						@profile.Provider.FileExtension
 					</td>
 					<td>
