--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileInfo.cshtml
@@ -3,50 +3,38 @@
 @{
 	Layout = null;
 }
-<div class="clearfix">
-	<table class="adminContent">
+<table class="adminContent">
+	@if (Model.Profiles.Count == 0)
+	{
+		<tr>
+			<td colspan="2">
+				@Html.Raw(T("Admin.DataExchange.Export.NoProfilesForProvider", Url.Action("List", "Export", new { area = "Admin" })))
+			</td>
+		</tr>
+	}
+	@foreach (var profile in Model.Profiles)
+	{
 		<tr>
 			<td class="adminTitle">
 				@Html.SmartLabelFor(m => m.Profiles)
 			</td>
 			<td class="adminData">
-				@if (Model.Profiles.Count == 0)
-				{
-					@Html.Raw(T("Admin.DataExchange.Export.NoProfilesForProvider", Url.Action("List", "Export", new { area = "Admin" })))
-				}
-				else
-				{
-					<a href="@Url.Action("Edit", "Export", new { id = Model.Profiles.First().Id, area = "Admin" })">@Model.Profiles.First().Name</a>
-				}
+				<a href="@Url.Action("Edit", "Export", new { id = profile.Id, area = "Admin" })">
+					@profile.Name
+					
+				</a>
 			</td>
 		</tr>
-		@if (Model.ScheduleTaskId.HasValue)
+		if (profile.ScheduleTaskId.HasValue)
 		{
 			<tr>
 				<td class="adminTitle">
-					@Html.SmartLabelFor(m => m.ScheduleTaskId)
+					@Html.SmartLabel("ProfileScheduleTask" + Model.Profiles.IndexOf(profile).ToString(), T("Common.Execution"))
 				</td>
 				<td class="adminData">
-					@Html.Action("MinimalTask", "ScheduleTask", new { taskId = Model.ScheduleTaskId.Value, returnUrl = Model.ReturnUrl, cancellable = true, area = "admin" })
+					@Html.Action("MinimalTask", "ScheduleTask", new { taskId = profile.ScheduleTaskId.Value, returnUrl = Model.ReturnUrl, cancellable = true, area = "admin" })
 				</td>
 			</tr>
 		}
-		@if (Model.Profiles.Count > 1)
-		{
-			<tr>
-				<td class="adminTitle">
-					&nbsp;
-				</td>
-				<td class="adminData">
-					@(T("Admin.DataExchange.Export.MoreThanOneProfile")):
-
-					@for (int i = 1; i < Model.Profiles.Count; ++i)
-					{
-						if (i > 1) {<text>, </text>}
-						<a href="@Url.Action("Edit", "Export", new { id = Model.Profiles[i].Id, area = "Admin" })">@Model.Profiles[i].Name</a>
-					}					
-				</td>
-			</tr>
-		}
-	</table>
-</div>
+	}
+</table>
