Download button for export log file

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
@@ -18,6 +18,10 @@
 			<input type="hidden" name="SelectedIds" value="" />
 			<input type="hidden" name="ExportAll" value="false" />
 
+			@if (Model.LogFileExists)
+			{
+				<a href="@Url.Action("DownloadLogFile", new { id = Model.Id })" class="btn" download><i class="fa fa-file-text-o"></i>&nbsp;@T("Admin.Configuration.ActivityLog")</a>
+			}
 			<button type="button" id="ExportSelected" class="btn btn-primary">
 				<i class="fa fa-gears"></i>&nbsp;@T("Admin.Common.ExportSelected")
 			</button>
