Option to apply settings from another profile when creating a new export profile

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -139,6 +139,7 @@ else
 				callbackSuccess: function (resp) {
 					dialog.find('.modal-body').html(resp);
 					$('select[name="Provider.SystemName"]').selectWrapper();
+					$('select[name="CloneProfileId"]').selectWrapper();
 					toggleProviderDescription();
 				},
 				callbackComplete: function () {
