--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Create.cshtml
@@ -10,7 +10,7 @@
 		<form method="POST" class="export-profile-form" action="@Url.Action("Create", "Export")">
 			<table class="adminContent">
 				<tr>
-					<td class="adminTitle" style="width: 100px !important; min-width: 100px !important; max-width: 100px !important;">
+					<td class="adminTitle">
 						@Html.SmartLabelFor(model => model.Provider.SystemName)
 					</td>
 					<td class="adminData">
@@ -18,7 +18,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="adminTitle" style="width: 100px !important; min-width: 100px !important; max-width: 100px !important;">
+					<td class="adminTitle">
 						&nbsp;
 					</td>
 					<td class="adminData">
@@ -28,6 +28,17 @@
 						}
 					</td>
 				</tr>
+				@if(Model.AvailableProfiles.Count > 0)
+				{
+					<tr>
+						<td class="adminTitle">
+							@Html.SmartLabelFor(model => model.CloneProfileId)
+						</td>
+						<td class="adminData">
+							@Html.DropDownListFor(model => model.CloneProfileId, Model.AvailableProfiles, Model.UnspecifiedString, new { style = "width: 500px;" })
+						</td>
+					</tr>
+				}
 			</table>
 		</form>
 	}
