Export framework supports export providers with a non file based, on the fly data exporting

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -57,8 +57,7 @@
 						@profile.Provider.EntityTypeName
 					</td>
 					<td class="centered">
-						@Html.IconForFileExtension(profile.Provider.FileExtension)
-						@profile.Provider.FileExtension
+						@Html.IconForFileExtension(profile.Provider.FileExtension, true)
 					</td>
 					<td>
 						<div class="last-run-info">
