--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Edit.cshtml
@@ -142,8 +142,7 @@
 				@Html.SmartLabelFor(x => x.Provider.FileExtension)
 			</td>
 			<td class="adminData">
-				@Html.IconForFileExtension(Model.Provider.FileExtension)
-				@Html.DisplayFor(x => x.Provider.FileExtension)
+				@Html.IconForFileExtension(Model.Provider.FileExtension, true)
 			</td>
 		</tr>
 	</table>
