--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -80,6 +80,13 @@
 						   data-task-id="@profile.ScheduleTaskId" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 							@T("Common.Cancel")
 						</a>
+
+						@if (!profile.IsTaskRunning && profile.LogFileExists)
+						{
+							<a href="@Url.Action("DownloadLogFile", new { id = profile.Id })" class="btn btn-small">
+								<i class="fa fa-file-text-o"></i>&nbsp;@T("Admin.Configuration.ActivityLog")
+							</a>
+						}
 					</td>
 				</tr>
 			}
